Trabalho das aulas/pl 11-04/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> bibtex
Rule 1     bibtex -> referencias
Rule 2     referencias -> referencias referencia
Rule 3     referencias -> <empty>
Rule 4     referencia -> TIPOreg { chaveCitacao , campos }
Rule 5     chaveCitacao -> PAL
Rule 6     campos -> campos , campo
Rule 7     campos -> campo
Rule 8     campo -> nomeCampo SEP valorCampo
Rule 9     nomeCampo -> PAL
Rule 10    valorCampo -> TEXTO

Terminals, with rules where they appear

,                    : 4 6
PAL                  : 5 9
SEP                  : 8
TEXTO                : 10
TIPOreg              : 4
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

bibtex               : 0
campo                : 6 7
campos               : 4 6
chaveCitacao         : 4
nomeCampo            : 8
referencia           : 2
referencias          : 1 2
valorCampo           : 8

Parsing method: LALR

state 0

    (0) S' -> . bibtex
    (1) bibtex -> . referencias
    (2) referencias -> . referencias referencia
    (3) referencias -> .

    TIPOreg         reduce using rule 3 (referencias -> .)
    $end            reduce using rule 3 (referencias -> .)

    bibtex                         shift and go to state 1
    referencias                    shift and go to state 2

state 1

    (0) S' -> bibtex .



state 2

    (1) bibtex -> referencias .
    (2) referencias -> referencias . referencia
    (4) referencia -> . TIPOreg { chaveCitacao , campos }

    $end            reduce using rule 1 (bibtex -> referencias .)
    TIPOreg         shift and go to state 4

    referencia                     shift and go to state 3

state 3

    (2) referencias -> referencias referencia .

    TIPOreg         reduce using rule 2 (referencias -> referencias referencia .)
    $end            reduce using rule 2 (referencias -> referencias referencia .)


state 4

    (4) referencia -> TIPOreg . { chaveCitacao , campos }

    {               shift and go to state 5


state 5

    (4) referencia -> TIPOreg { . chaveCitacao , campos }
    (5) chaveCitacao -> . PAL

    PAL             shift and go to state 7

    chaveCitacao                   shift and go to state 6

state 6

    (4) referencia -> TIPOreg { chaveCitacao . , campos }

    ,               shift and go to state 8


state 7

    (5) chaveCitacao -> PAL .

    ,               reduce using rule 5 (chaveCitacao -> PAL .)


state 8

    (4) referencia -> TIPOreg { chaveCitacao , . campos }
    (6) campos -> . campos , campo
    (7) campos -> . campo
    (8) campo -> . nomeCampo SEP valorCampo
    (9) nomeCampo -> . PAL

    PAL             shift and go to state 12

    campos                         shift and go to state 9
    campo                          shift and go to state 10
    nomeCampo                      shift and go to state 11

state 9

    (4) referencia -> TIPOreg { chaveCitacao , campos . }
    (6) campos -> campos . , campo

    }               shift and go to state 14
    ,               shift and go to state 13


state 10

    (7) campos -> campo .

    }               reduce using rule 7 (campos -> campo .)
    ,               reduce using rule 7 (campos -> campo .)


state 11

    (8) campo -> nomeCampo . SEP valorCampo

    SEP             shift and go to state 15


state 12

    (9) nomeCampo -> PAL .

    SEP             reduce using rule 9 (nomeCampo -> PAL .)


state 13

    (6) campos -> campos , . campo
    (8) campo -> . nomeCampo SEP valorCampo
    (9) nomeCampo -> . PAL

    PAL             shift and go to state 12

    campo                          shift and go to state 16
    nomeCampo                      shift and go to state 11

state 14

    (4) referencia -> TIPOreg { chaveCitacao , campos } .

    TIPOreg         reduce using rule 4 (referencia -> TIPOreg { chaveCitacao , campos } .)
    $end            reduce using rule 4 (referencia -> TIPOreg { chaveCitacao , campos } .)


state 15

    (8) campo -> nomeCampo SEP . valorCampo
    (10) valorCampo -> . TEXTO

    TEXTO           shift and go to state 18

    valorCampo                     shift and go to state 17

state 16

    (6) campos -> campos , campo .

    }               reduce using rule 6 (campos -> campos , campo .)
    ,               reduce using rule 6 (campos -> campos , campo .)


state 17

    (8) campo -> nomeCampo SEP valorCampo .

    }               reduce using rule 8 (campo -> nomeCampo SEP valorCampo .)
    ,               reduce using rule 8 (campo -> nomeCampo SEP valorCampo .)


state 18

    (10) valorCampo -> TEXTO .

    }               reduce using rule 10 (valorCampo -> TEXTO .)
    ,               reduce using rule 10 (valorCampo -> TEXTO .)

